FirebaseManager posts like/comment + cleanup